# skd1_visualization

skd1_rviz/: CMakeLists.txt  package.xml
skd1_rviz/launch/: skd1_rviz_nav2_indoor_launch.py  view_model_launch.py
skd1_rviz/rviz/: nav2_indoor.rviz
