<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>skd1_rviz</name>
  <version>1.0.0</version>
  <description>RViz launchers for SKD-1</description>
  <maintainer email="gsanchez@sinc.unl.edu.ar">ubuntu</maintainer>
  <maintainer email="acapovilla@sinc.unl.edu.ar">Agustin Capovilla</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
